# AI_GAME

./: .gitignore  CMakeLists.txt  Enemy.aseprite  Enemy.cpp  Enemy.hpp  Enemy.json  EnemyDNA.cpp  EnemyDNA.hpp  Game.cpp  Game.hpp  GameObjects.cpp  GameObjects.hpp  GeneticAlgorithm.cpp  GeneticAlgorithm.hpp  Player.cpp  Player.hpp  README.md  Roket_anim-Sheet.aseprite  Roket_anim.aseprite  Roket_anim.json  astroid.aseprite  main.cpp  todo.txt  utility.hpp
build_web/: CPackConfig.cmake  CPackSourceConfig.cmake  SpaecAutonomous.data  SpaecAutonomous.html  SpaecAutonomous.js  SpaecAutonomous.wasm
build_web/raylib/raylib/: raylib.pc
